--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <meta name="msapplication-TileColor" content="#0000ff" />
     <!-- end icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="css/custom.css" />
+    <script src="https://unpkg.com/vue@3.2.26/dist/vue.global.js" defer></script>
     <script src="js/openNavMenu.js" defer></script>
 </head>
   <body>
   <!-- navbar -->
     <nav class="navbar is-light" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="/">
+        <a class="navbar-item" href="./">
           <img src="img/sakura_logo.png" width="112" height="28">
         </a>
 
@@ -84,14 +86,14 @@
     <img src="img/sakura_banner.png">
   </figure>
   <section class="section">
-    <div class="container">
-      <h1 class="title">
-        Hello World
-      </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
-    </div>
+      <div class="container">
+          <h1 class="title">
+              Hello World
+          </h1>
+          <p class="subtitle">
+              My first website with <strong>Bulma</strong>!
+          </p>
+      </div>
   </section>
   </body>
 </html>
