--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="msapplication-wide310x150logo" content="sakura_310x150.png" />
     <meta name="msapplication-TileColor" content="#0000ff" />
     <!-- end icon -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300&family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="css/custom.css" />
     <script src="https://unpkg.com/vue@3.2.26/dist/vue.global.js" defer></script>
